--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.10.7",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.4.38"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
